--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,8 +37,14 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
+    - name: deploy
+      run: |
+        git config --global user.name $user_name
+        git config --global user.email $user_email
+        git remote set-url origin https://adarivamsi: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@github.com/${repository}
+        npm run deploy
+      env:
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-        publish_dir: ./build
+        repository: ${{ github.repository }}
