--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         git config --global user.name $user_name
         git config --global user.email $user_email
-        git remote set-url origin https://adarivamsi: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@github.com/${repository}
+        git remote set-url origin https://adarivamsi:pbinder deploy-access@github.com/${repository}
         npm run deploy
       env:
         user_name: 'github-actions[bot]'
